content wrap fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,3 +71,22 @@ body {
   background-color: #ccc;
   color: #333;
 }
+
+#content-wrapper {
+  background-image: url("../images/repeating.png");
+  float: left;
+}
+
+#main-content {
+  min-height: 300px;
+  width: 715px;
+  margin-right: 30px;
+  float: left;
+  margin-left: 15px;
+}
+
+#side-content {
+  min-height: 150px;
+  width: 200px;
+  float: left;
+}
